--- a/assets/sass/components/_image.scss
+++ b/assets/sass/components/_image.scss
@@ -47,6 +47,7 @@
 				width: 100%;
 				&:hover {
 					@include vendor('transform', 'scale(1.05)');
+					@include vendor('transition', 'transform #{_duration(transition)} ease-in-out');
 				}
 			}
 		}
